--- a/demo/index.html
+++ b/demo/index.html
@@ -36,7 +36,7 @@ $(document).ready(function(){
 	}
 
 	new REST_caller({
-		resource: 'http://localhost/restify/demo/restful_ep.php/075389',
+		resource: 'http://localhost/restme/demo/example/075389',
 		query: {
 			'name': 'new name',
 			'rand_data': 'another new data'
